# snake

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/snake_game/: actions.hpp  constants.hpp  game.hpp  reducer.hpp  snake.hpp  store.hpp  utils.hpp
src/snake_game/model/: game_model.hpp  snake_model.hpp
src/snake_game/ui/: game.hpp  game_component.hpp
